# xcb-vs-gtk

./: .gitignore  LICENSE  README.md  stack.yaml  xcb-vs-gtk.cabal
app/: Main.hs  gui.glade
